fixing production bug and alsomaking the audio testing better and user interfcae on mobile phone cleaner

--- a/src/styles/system-check/systemIcon.module.scss
+++ b/src/styles/system-check/systemIcon.module.scss
@@ -76,20 +76,28 @@
 }
 
 .previewBox {
-  width: 400px;
-  height: 225px;
-  border: 2px solid #755AE2;
-  border-radius: 10px;
-  background-color: #F5F3FF;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  max-width: 400px; 
+  height: auto;
+  aspect-ratio: 4 / 3; 
+  overflow: hidden;
+  position: relative;
+  border-radius: 12px;
+  border: 2px solid #ccc;
+  background-color: #f4f4f4;
+  margin-bottom: 16px;
+  
+    img, video {
+    width: 100%;
+    height: 100%;
+    object-fit: contain; 
+    border-radius: 12px;
+  }
 }
 
-.videoPreview {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+
+  .capturedImage {
+  display: block;
 }
 
 @media (max-width: 768px), (max-width: 480px) {
